fix(notifications): move the notifications HTML out of the page-wrap

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -38,14 +38,15 @@
   </nav>
   <!-- / page-navigation -->
 
+  <!-- # page-notifications -->
+  <div class="row controls">
+    <div notifications-panel
+         class="cols notifications-panel page-notifications"></div>
+  </div>
+  <!-- / page-notifications -->
+
   <!-- # page-content -->
   <div class="page-wrap" >
-    <div class="row controls">
-      <div notifications-panel
-           class="cols notifications-panel page-notifications"></div>
-    </div>
-
-
     <div ng-view
          class="ui-wrap"></div>
   </div>
