--- a/client/client/scripts/task/directives/cam-tasklist-groups-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-groups-form.html
@@ -1,57 +1,98 @@
-<form class="form form-horizontal"
-      name="newComment"
-      role="form"
-      ng-submit="addGroup()">
+<div class="modal-header">
+  <h3 class="modal-title">
+    {{ 'GROUPS_EDIT' | translate }}
+  </h3>
+</div>
 
-  <div class="modal-header">
-    <h3 class="modal-title">
-      {{ 'GROUPS_EDIT' | translate }}
-    </h3>
-  </div>
 
-  <div class="modal-body">
-  <form name="editForm" ng-submit="addFormItem()">
-    <fieldset ng-show="groups.length" class="">
-      <legend>{{ 'CURRENT_GROUPS' | translate }}</legend>
-      <table class="table table-striped table-bordered table-condensed">
-         <thead>
-          <tr>
-            <th class="text-right group-action-header">{{ 'ACTION' | translate }}</th>
-            <th>{{ 'GROUP_ID' | translate }}</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="(delta, group) in groups">
-            <td class="text-right">
-                  <a href
-                     ng-click="removeGroup(group)"
-                     class="glyphicon glyphicon-remove"></a>
-            </td>
-            <td>{{ group }}</td>
-          </tr>
-        </tbody>
-      </table>
-    </fieldset>
 
-    <fieldset>
-      <legend>{{ 'GROUP_ADD' | translate }}</legend>
-      <div class="input-append">
-        <input type="text" class="form-control group-input" ng-model="newGroup.name" name="newGroup" required>
-        <a href
-           ng-click="addGroup()"
-           class="glyphicon glyphicon-plus-sign"></a>
+
+
+<div class="modal-body">
+  <div notifications-panel />
+
+  <form name="taskGroupForm"
+        class="form-horizontal"
+        ng-submit="addFormItem()">
+
+    <div ng-if="groups.length"
+         class="current-groups">
+
+      <!--
+      <div class="row">
+        <div class="col-xs-12">
+          <h4>{{ 'CURRENT_GROUPS' | translate }}</h4>
+        </div>
       </div>
-    </fieldset>
-  </form>  </div>
+      -->
 
-  <div class="modal-footer">
-    <div class="row row-action">
-      <div class="col-xs-12">
-        <button class="btn btn-primary"
-                type="button"
-                ng-click="$dismiss()"
-                translate="CLOSE">Close</button>
+      <div class="row labels"
+           ng-if="groups.length">
+        <label class="col-xs-4 align-right">
+          {{ 'ACTION' | translate }}
+        </label>
+        <label class="col-xs-8">
+          {{ 'GROUP_ID' | translate }}
+        </label>
+      </div>
+
+      <div class="form-group values"
+           ng-repeat="(delta, group) in groups">
+        <div class="col-xs-4 align-right">
+          <!-- "remove" text ? -->
+          <a href
+             ng-click="removeGroup(group)"
+             class="glyphicon glyphicon-minus-sign"></a>
+        </div>
+        <div class="col-xs-8">
+          {{ group }}
+        </div>
       </div>
     </div>
+
+
+    <div class="new-group">
+      <div class="form-group">
+        <label class="col-xs-4 control-label"
+               for="new-group-input">
+          {{ 'GROUP_ADD' | translate }}
+        </label>
+
+        <div class="col-xs-8">
+          <div class="input-group">
+            <input id="new-group-input"
+                   type="text"
+                   class="form-control group-input"
+                   ng-model="newGroup.name"
+                   name="newGroup"
+                   required>
+
+            <span class="input-group-addon">
+              <a ng-click="addGroup()"
+                 class="glyphicon glyphicon-plus-sign">
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </form>
+</div>
+
+
+
+
+
+
+
+<div class="modal-footer">
+  <div class="row row-action">
+    <div class="col-xs-12">
+      <button class="btn btn-primary"
+              type="button"
+              ng-click="$dismiss()"
+              translate="CLOSE">Close</button>
+    </div>
   </div>
-</form>
+</div>
