impr(search): remove invalid operators from options
depending on the type of the value of a search, remove invalid operators
from the operator options (e.g. operator < is invalid for type boolean)

related to CAM-2756

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -59,7 +59,8 @@
             class="btn btn-xs btn-default"
             ng-click="changeType()"
             ng-if="flexible">
-      <span class="glyphicon glyphicon-calendar"></span>
+      <span ng-show="varType === 'text'" class="glyphicon glyphicon-calendar"></span>
+      <span ng-show="varType === 'datetime'" class="glyphicon glyphicon-pencil"></span>
     </button>
 
     <button type="button"
