impr(search): use before and after as operators for date queries
related to CAM-2756

--- a/client/client/scripts/form/directives/cam-form-inline-field.html
+++ b/client/client/scripts/form/directives/cam-form-inline-field.html
@@ -43,11 +43,11 @@
 
     </span>
     <div ng-if="varType === 'option'">
-      <span style="padding: 4px;">{{varValue}}</span>
+      <span style="padding: 4px;">{{varValue | translate }}</span>
       <ul class="dropdown-menu" style="display:block;" role="menu">
         <li ng-repeat="option in options">
           <a ng-click="applyChange(option)">
-            {{option}}
+            {{option | translate }}
           </a>
         </li>
       </ul>
