--- a/client/client/scripts/navigation/directives/cam-task-search.html
+++ b/client/client/scripts/navigation/directives/cam-task-search.html
@@ -47,7 +47,7 @@
               value="search.operator">
           <span tooltip-placement="top"
                 tooltip="{{'OPERATOR' | translate}}">
-            {{ varValue | queryComponent }}
+            {{ varValue | queryComponent | translate }}
           </span>
         </span>
 
