fix(groups): change the modal close button appearance
To match the start process modal close button.

Related to: CAM-2740

--- a/client/client/scripts/task/directives/cam-tasklist-groups-form.html
+++ b/client/client/scripts/task/directives/cam-tasklist-groups-form.html
@@ -89,7 +89,7 @@
 <div class="modal-footer">
   <div class="row row-action">
     <div class="col-xs-12">
-      <button class="btn btn-primary"
+      <button class="btn btn-xs btn-link"
               type="button"
               ng-click="$dismiss()"
               translate="CLOSE">Close</button>
