--- a/client/client/scripts/variable/directives/cam-tasklist-variables.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables.html
@@ -13,7 +13,7 @@
               ng-click="selectValue($event)"> -->
         <span class="col-xs-4 col-lg-12">
           <strong class="variable-label"
-                  tooltip-placement="left"
+                  tooltip-placement="top"
                   tooltip="{{ info.name }}">
             {{ info.label }}:
           </strong>
