impr(form): provide a directive to show a form
This commit

- removes two behaviors to show a form
- implements a single directive to show a form which will be used for a
  task and to start a process
- adds the behavior that whenever a task (or process definition start
  event) has not a dedicated form (embedded or external) a generic form
  will be shown. This generic form offers to enter several variables.
- removes the typeahead to search for process definitions
- etc.

related to CAM-2637

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -31,27 +31,27 @@
 </head>
 
 <body ng-class="{ 'authenticated' : (authentication && authentication.name) }">
-  <!-- # page-navigation -->
-  <nav class="navbar navbar-default"
-       role="navigation"
-       cam-tasklist-navigation>
-  </nav>
-  <!-- / page-navigation -->
 
-  <!-- # page-notifications -->
-  <div class="row controls">
-    <div notifications-panel
-         class="cols notifications-panel page-notifications"></div>
+  <div class="site-wrap" ng-controller="camTasklistAppCtrl">
+    <!-- # page-navigation -->
+    <nav class="navbar navbar-default"
+         role="navigation"
+         cam-tasklist-navigation>
+    </nav>
+    <!-- / page-navigation -->
+
+    <!-- # page-content -->
+    <div class="page-wrap" >
+      <div class="row controls">
+        <div notifications-panel
+             class="cols notifications-panel page-notifications"></div>
+      </div>
+
+      <div ng-view
+           class="ui-wrap"></div>
+    </div>
+    <!-- / page-content -->
   </div>
-  <!-- / page-notifications -->
-
-  <!-- # page-content -->
-  <div class="page-wrap" >
-    <div ng-view
-         class="ui-wrap"></div>
-  </div>
-  <!-- / page-content -->
-
 
   <div class="fake-columns container-fluid">
     <div class="row">
@@ -60,7 +60,6 @@
       <div class="cols col-sm-6 current-task"></div>
     </div>
   </div>
-
 
   <!-- # page-footer -->
   <footer class="page">
