--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -43,8 +43,8 @@
           class="process-definitions">
         <a tooltip-placement="bottom"
            tooltip="{{ 'START_PROCESS' | translate }}"
-           ng-controller="processStartCtrl"
-           ng-click="openProcessStartModal()"
+           ng-controller="camProcessStartCtrl"
+           ng-click="open()"
            href>
           <i class="glyphicon glyphicon-list-alt"></i>
         </a>
