--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
@@ -1,4 +1,8 @@
 <div class="form-pane">
-  <div cam-tasklist-task-form
-       task-data="taskData"></div>
+
+  <div cam-tasklist-form
+       tasklist-form="taskForm"
+       on-form-completion-callback="completionCallback"
+       options="options" >
+  </div>
 </div>
