impr(filter): prevent propagation of click event to edit or delete

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -7,7 +7,7 @@
       <h5>
         <a href
            ng-show="userCanCreateFilter"
-           ng-click="openDialog('CREATE_NEW_FILTER')">
+           ng-click="openDialog($event, 'CREATE_NEW_FILTER')">
           {{ 'FILTER_CREATE' | translate }}
           <span class="glyphicon glyphicon-plus-sign"></span>
         </a>
