--- a/client/client/scripts/filter/directives/cam-tasklist-filters.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-filters.html
@@ -32,7 +32,7 @@
         <ul class="filter-actions list-unstyled" ng-controller="camEditFilterCtrl">
           <li>
             <a href
-               ng-click="openDialog('EDIT_FILTER')">
+               ng-click="openDialog($event, 'EDIT_FILTER')">
               <span class="glyphicon glyphicon-pencil"></span>
               <span class="hidden-sm hidden-xs hidden-md"
                     translate="FILTER_EDIT">Edit filter</span>
@@ -40,7 +40,7 @@
           </li>
           <li>
             <a href
-               ng-click="openDialog('DELETE_FILTER')">
+               ng-click="openDialog($event, 'DELETE_FILTER')">
               <span class="glyphicon glyphicon-trash"></span>
               <span class="hidden-sm hidden-xs hidden-md"
                     translate="FILTER_DELETE">Delete filter</span>
