feat(layout): add a layout focused on the task details
Related to: CAM-2943

feat(layout): add a layout focused on the task details

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -31,7 +31,6 @@
 </head>
 
 <body ng-class="{ 'authenticated' : (authentication && authentication.name) }">
-
   <div class="site-wrap" ng-controller="camTasklistAppCtrl">
     <!-- # page-navigation -->
     <nav class="navbar navbar-default"
@@ -53,19 +52,25 @@
     <!-- / page-content -->
   </div>
 
-  <div class="fake-columns container-fluid">
-    <div class="row">
-      <div class="cols col-sm-2 task-filters"></div>
-      <div class="cols col-sm-4 task-list"></div>
-      <div class="cols col-sm-6 current-task"></div>
+  <!-- <div class="page-wrap" >
+  </div> -->
+    <div class="fake-columns">
+      <div class="row">
+        <div class="cols col-sm-2 task-filters"></div>
+        <div class="cols col-sm-4 task-list"></div>
+        <div class="cols col-sm-6 current-task"></div>
+      </div>
     </div>
-  </div>
 
   <!-- # page-footer -->
   <footer class="page">
-    <div>
-      Powered by <a href="http://camunda.org">camunda BPM</a> /
-      <span class="version">v${project.version}</span>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          Powered by <a href="http://camunda.org">camunda BPM</a> /
+          <span class="version">v${project.version}</span>
+        </div>
+      </div>
     </div>
   </footer>
   <!-- / page-footer -->
