--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -13,8 +13,9 @@
         </a>
       </h5>
 
-      <button ng-click="toggleFilters($event)"
-              class="toggle-filters btn btn-link">
+      <button ng-click="toggleOffCanvas($event)"
+              data-off-canvas-toggle="filters"
+              class="off-canvas-toggle btn btn-link">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -34,13 +35,21 @@
                tasklist-data="tasklistData"></div>
         </div>
       </div>
+
+      <button ng-click="toggleOffCanvas($event)"
+              data-off-canvas-toggle="list"
+              class="off-canvas-toggle btn btn-link">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
     </div>
   </div>
 
   <div class="cols col-sm-6 current-task"
        ng-controller="camTaskActionCtrl">
-    <div class="inner" ng-show="task">
-      <h5>
+    <div class="inner">
+      <h5 ng-show="task">
         <span ng-repeat="taskAction in taskActions">
           <view provider="taskAction" vars="taskVars">
         </span>
