impr(form): show failure when form information could not be loaded
related to CAM-2637

--- a/client/client/scripts/form/directives/cam-tasklist-form.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form.html
@@ -1,4 +1,4 @@
-<div ng-show="!tasklistForm.$loaded"
+<div ng-show="tasklistForm && !tasklistForm.$loaded"
      class="loader">
   <i class="animate-spin glyphicon glyphicon-refresh"></i>
   {{ 'LOADING' | translate }}
