--- a/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
+++ b/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
@@ -71,7 +71,14 @@
 
   <div ng-if="PROCESS_TO_START_SELECTED">
 
-    <div cam-tasklist-form 
+    <div ng-show="startFormState.$error" class="alert alert-danger" role="alert">
+      <span class="glyphicon glyphicon-exclamation-sign"></span>
+      <strong class="status">{{ 'FORM_FAILURE' | translate }}</strong>
+      <span class="message">{{ startFormState.$error.message }}</span>
+    </div>
+
+    <div ng-hide="!startFormState.$error"
+         cam-tasklist-form 
          tasklist-form="startForm"
          on-form-completion-callback="completionCallback"
          on-form-completion="registerCompletionHandler"
