--- a/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
+++ b/client/client/scripts/task/plugins/detail/cam-tasklist-task-detail-form-plugin.html
@@ -1,8 +1,16 @@
 <div class="form-pane">
 
-  <div cam-tasklist-form
+  <div ng-show="taskFormState.$error" class="alert alert-danger" role="alert">
+    <span class="glyphicon glyphicon-exclamation-sign"></span>
+    <strong class="status">{{ 'FORM_FAILURE' | translate }}</strong>
+    <span class="message">{{ taskFormState.$error.message }}</span>
+  </div>
+
+  <div ng-hide="taskFormState.$error"
+       cam-tasklist-form
        tasklist-form="taskForm"
        on-form-completion-callback="completionCallback"
        options="options" >
   </div>
+
 </div>
