fix(form): show form in start process dialog
related to CAM-2637

--- a/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
+++ b/client/client/scripts/process/modals/cam-tasklist-process-start-modal.html
@@ -77,7 +77,7 @@
       <span class="message">{{ startFormState.$error.message }}</span>
     </div>
 
-    <div ng-hide="!startFormState.$error"
+    <div ng-hide="startFormState.$error"
          cam-tasklist-form 
          tasklist-form="startForm"
          on-form-completion-callback="completionCallback"
