fix(variable): display byte variables in list of tasks correctly

--- a/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
@@ -13,6 +13,10 @@
     {{ 'VARIABLE_SERIALIZED_OF' | translate }}
     <code class="variable-type">{{ type }}</code>
   </div>
+  <div>
+    {{ 'VARIABLE_SERIALIZED_BY' | translate }}
+    <code class="variable-type">{{ dataFormat }}</code>
+  </div>
 
   <div class="form-group">
     <textarea class="form-control"
