impr(notification): show meaningful error message on change error
related to CAM-924

--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -24,7 +24,9 @@
         </div>
 
         <div cam-tasklist-task-meta
-             task-data="taskData"></div>
+             task-data="taskData"
+             success-handler="successHandler"
+             error-handler="errorHandler"></div>
       </div>
     </header>
 
