--- a/client/client/scripts/task/directives/cam-tasklist-task.html
+++ b/client/client/scripts/task/directives/cam-tasklist-task.html
@@ -19,7 +19,8 @@
           <h2 class="task">{{ task.name || task.taskDefinitionKey || task.id }}</h2>
           <h4 class="process-definition"
               ng-class="{suspended: task._embedded.processDefinition[0]}">
-            {{ task._embedded.processDefinition[0].name || task._embedded.processDefinition[0].key }}
+            {{ task._embedded.processDefinition[0].name || task._embedded.processDefinition[0].key ||
+               task._embedded.caseDefinition[0].name || task._embedded.caseDefinition[0].key }}
           </h4>
         </div>
 
