chore(navigation): add sem tags for testability
add sem tags to navigation bar to improve ui-testability

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -65,6 +65,7 @@
         <a tooltip-placement="left"
            tooltip="{{ 'MANAGE_ACCOUNT' | translate }}"
            href
+           sem-show-user-actions
            class="dropdown-toggle"
            data-toggle="dropdown">
           <i class="glyphicon glyphicon-user"></i>
@@ -72,7 +73,8 @@
         </a>
         <ul class="dropdown-menu">
           <li class="user-profile">
-            <a ng-href="{{ 'adminbase://' | uri }}/#/users/{{ username }}?tab=profile"
+            <a sem-jump-to-profile
+               ng-href="{{ 'adminbase://' | uri }}/#/users/{{ username }}?tab=profile"
                translate="MY_PROFILE">
               My Profile
             </a>
@@ -81,7 +83,8 @@
           <li class="divider"></li>
 
           <li class="sign-out">
-            <a href="#/logout"
+            <a sem-log-out
+               href="#/logout"
                translate="SIGN_OUT_ACTION">
               Sign out
             </a>
