fix(engine): configure http client with current selected engine
related to CAM-2955

--- a/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
+++ b/client/client/scripts/navigation/directives/cam-tasklist-navigation.html
@@ -74,7 +74,7 @@
         <ul class="dropdown-menu">
           <li class="user-profile">
             <a sem-jump-to-profile
-               ng-href="{{ 'adminbase://' | uri }}/#/users/{{ username }}?tab=profile"
+               ng-href="{{ 'adminbase://:engine' | uri }}/#/users/{{ username }}?tab=profile"
                translate="MY_PROFILE">
               My Profile
             </a>
