--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -1,72 +1,98 @@
 <div class="modal-header">
   <h3 class="modal-title">
-    {{ 'GROUPS_EDIT' | translate }}
+    {{ operation | translate }}
   </h3>
 </div>
 
-
 <div class="modal-body">
-  <div notifications-panel class="cols notifications-panel page-notifications">
+
+  <div notifications-panel class="cols notifications-panel"></div>
+
+  <div ng-show="!modalGroupsState.$loaded && !modalGroupsState.$error"
+       class="loader">
+    <i class="animate-spin glyphicon glyphicon-refresh"></i>
+    {{ 'LOADING' | translate }}
   </div>
 
-  <form name="taskGroupForm"
-        class="form-horizontal"
-        ng-submit="addFormItem()">
+  <div ng-hide="!modalGroupsState.$loaded || modalGroupsState.$error">
 
-    <div ng-if="groups.length"
-         class="current-groups">
-
-      <div class="row labels"
-           ng-if="groups.length">
-        <label class="col-xs-4 align-right">
-          {{ 'ACTION' | translate }}
-        </label>
-        <label class="col-xs-8">
-          {{ 'GROUP_ID' | translate }}
-        </label>
+    <div ng-show="EDIT_GROUPS">
+      <div class="text-help">
+        <i class="glyphicon glyphicon-info-sign"></i>
+        {{ 'USE_ADD_GROUP' | translate }}
       </div>
 
-      <div class="form-group values"
-           ng-repeat="(delta, group) in groups">
-        <div class="col-xs-4 align-right">
-          <a href
-             ng-click="removeGroup(group)"
-             class="glyphicon glyphicon-minus-sign"></a>
-        </div>
-        <div class="col-xs-8">
-          {{ group }}
-        </div>
-      </div>
-    </div>
-
-
-    <div class="new-group">
-      <div class="form-group">
-        <label class="col-xs-4 control-label"
-               for="new-group-input">
-          {{ 'GROUP_ADD' | translate }}
-        </label>
-
-        <div class="col-xs-8">
-          <div class="input-group">
-            <input id="new-group-input"
-                   type="text"
-                   class="form-control group-input"
-                   ng-model="newGroup.name"
-                   name="newGroup"
-                   required>
-
-            <span class="input-group-addon">
-              <a ng-click="addGroup()"
-                 class="glyphicon glyphicon-plus-sign">
-              </a>
+      <div class="form-group row labels-left">
+        <div class="col-xs-3 row-action">
+          <a ng-click="addGroup()"
+             href>
+            <span class="hidden-sm hidden-xs">
+              {{ 'GROUP_ADD' | translate }}
             </span>
-          </div>
+            <i class="glyphicon glyphicon-plus-sign"></i>
+          </a>
         </div>
       </div>
+
+      <form name="editGroupsForm">
+        <div ng-repeat="(delta, group) in _groups"
+             class="form-group row"
+             ng-class="{'has-error': (group.error || !group.groupId) }">
+
+          <div class="col-xs-3 text-right">
+            <a ng-click="removeGroup(delta)">
+              <i class="glyphicon glyphicon-minus-sign"></i>
+            </a>
+          </div>
+
+          <div class="col-xs-9">
+              <input id="new-group-input"
+                     type="text"
+                     class="form-control group-input"
+                     ng-model="group.groupId"
+                     ng-change="validateGroups()"
+                     placeholder="{{ 'GROUP' | translate }}"
+                     required>
+              <span ng-if="group.error"
+                   class="help-block">
+                {{ group.error.message | translate }}
+              </span>
+          </div>
+
+        </div>
+      </form>
     </div>
 
-  </form>
+    <div ng-hide="EDIT_GROUPS">
+      <table class="table table-bordered table-hover table-condensed">
+        <thead>
+          <th>Group</th>
+          <th>Operation</th>
+          <th>Status</th>
+        </thead>
+        <tbody>
+          <tr ng-repeat="action in actions">
+            <td>{{ action.group.groupId }}</td>
+            <td>{{ action.operation | translate }}</td>
+            <td>
+              <span ng-show="action.status && action.status === 'performing'" class="loader">
+                <i class="animate-spin glyphicon glyphicon-refresh"></i>
+              </span>
+              <span ng-show="action.status && action.status === 'successful'">
+                <i class="icon-ok"></i>&nbsp;{{ 'SUCCESSFUL' | translate }}
+              </span>
+              <span ng-show="action.status && action.status === 'failed'">
+                <i class="icon-remove"></i>&nbsp;{{ 'FAILED' | translate }}
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+
+  </div>
+
 </div>
 
 <div class="modal-footer">
@@ -74,8 +100,15 @@
     <div class="col-xs-12">
       <button class="btn btn-xs btn-link"
               type="button"
-              ng-click="$dismiss()"
+              ng-click="close()"
               translate="CLOSE">Close</button>
+
+      <button class="btn btn-primary"
+              ng-show="EDIT_GROUPS && !modalGroupsState.$error"
+              type="submit"
+              ng-disabled="!isValid()"
+              ng-click="saveChanges()"
+              translate="SAVE">Save</button>
     </div>
   </div>
 </div>
