impr(notifications): align tasklist notifications with cockpit
When applicable, put notifications in their contexts as well.

Related to: CAM-2883

--- a/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
+++ b/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
@@ -11,6 +11,9 @@
 
 
   <div class="modal-body">
+
+    <div notifications-panel />
+
     <accordion close-others="true"
                ng-show="!deletion">
       <accordion-group is-open="accordion.general">
