--- a/client/client/scripts/user/controller/cam-auth-login.html
+++ b/client/client/scripts/user/controller/cam-auth-login.html
@@ -6,6 +6,8 @@
 
     <h2 translate="PLEASE_SIGN_IN">Please sign in</h2>
 
+    <div notifications-panel />
+
     <div class="form-group">
       <input required
              autofocus="autofocus"
