--- a/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
+++ b/client/client/scripts/variable/directives/cam-tasklist-variables-detail-modal.html
@@ -8,24 +8,55 @@
 
 
 <div class="modal-body">
-  <div class="form-group"
-       ng-if="type">
-    {{ 'VARIABLE_SERIALIZED_OF' | translate }}
+  <div class="form-group">
+    <label translate="VARIABLE_VALUE_INFO">Value Info</label>
+  </div>
+  <div class="form-group">
+    {{ 'VARIABLE_OBJECT_TYPE_NAME' | translate }}:
     <code class="variable-type">{{ type }}</code>
   </div>
-  <div>
-    {{ 'VARIABLE_SERIALIZED_BY' | translate }}
+  <div class="form-group">
+    {{ 'VARIABLE_SERIALIZATION_DATA_FORMAT' | translate }}:
     <code class="variable-type">{{ dataFormat }}</code>
   </div>
 
   <div class="form-group">
-    <textarea class="form-control"
-              rows="12"
-              readonly>{{ value }}</textarea>
+    <label translate="VARIABLE_VALUE">Value</label>
   </div>
+
+   <ul class="nav nav-tabs">
+    <li ng-class="{ active: selectedTab === 'serialized' }">
+      <a href ng-click="selectTab('serialized')">Serialized</a>
+    </li>
+    <li ng-class="{ active: selectedTab === 'deserialized' }">
+      <a href ng-click="selectTab('deserialized')">Deserialized</a>
+    </li>
+  </ul>
+
+  <div ng-show="selectedTab === 'serialized'" class="tab-content">
+    <textarea disabled
+              ng-model="value"
+              rows="10"
+              class="form-control input-xxlarge">
+    </textarea>
+  </div>
+  <div ng-show="selectedTab === 'deserialized'" class="tab-content">
+    <div class="alert alert-warning"
+         role="alert" 
+         ng-show="deserializationError">
+      <strong>Deserialization Error</strong>:
+      {{deserializationError}}
+    </div>
+    <div ng-show="!deserializationError">
+      <textarea disabled
+                ng-model="valueDeserialized"
+                rows="10"
+                class="form-control input-xxlarge">
+      </textarea>
+    </div>
+  </div>
+
 </div>
-
-
 
 <div class="modal-footer">
   <div class="row row-action">
