impr(group/layout): improve the layout of the groups dialog
related to CAM-2740

--- a/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
+++ b/client/client/scripts/task/modals/cam-tasklist-groups-modal.html
@@ -37,9 +37,9 @@
       <form name="editGroupsForm">
         <div ng-repeat="(delta, group) in _groups"
              class="form-group row"
-             ng-class="{'has-error': (group.error || !group.groupId) }">
+             ng-class="{'has-error': group.error }">
 
-          <div class="col-xs-3 text-right">
+          <div class="col-xs-3 row-action text-right">
             <a ng-click="removeGroup(delta)">
               <i class="glyphicon glyphicon-minus-sign"></i>
             </a>
