--- a/client/client/scripts/filter/directives/cam-tasklist-tasks.html
+++ b/client/client/scripts/filter/directives/cam-tasklist-tasks.html
@@ -23,20 +23,21 @@
           {{ task.priority }}
         </div>
 
-        <div class="names"
-             ng-click="focus(task)">
+        <div class="names">
           <h4 class="task">
             <a ng-href="{{ getHrefUrl(task) }}"
+               ng-click="focus(task)"
                tabindex="{{ (delta + 1) }}">{{ task.name || task.taskDefinitionKey || task.id }}</a>
           </h4>
           <h6 class="process-definition"
-              ng-class="{suspended: task._embedded.processDefinition[0]}">
-            {{ task._embedded.processDefinition[0].name || task._embedded.processDefinition[0].key ||
-               task._embedded.caseDefinition[0].name || task._embedded.caseDefinition[0].key }}
+              ng-if="task.processDefinitionId">
+            {{ task._embedded.processDefinition[0].name || task._embedded.processDefinition[0].key }}
+          </h6>
+          <h6 class="case-definition"
+              ng-if="task.caseDefinitionId">
+            {{ task._embedded.caseDefinition[0].name || task._embedded.caseDefinition[0].key }}
           </h6>
         </div>
-
-
 
 
         <div class="row">
