--- a/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
+++ b/client/client/scripts/filter/modals/cam-tasklist-filter-form.html
@@ -39,6 +39,7 @@
 
               <div class="col-xs-9">
                 <input class="form-control"
+                       ng-readonly="!accesses.update"
                        id="filter-form-name"
                        ng-model="filter.name"
                        ng-change="validateGeneralInfo()"
@@ -62,7 +63,8 @@
                      translate="FILTER_COLOR_LABEL">Color</label>
 
               <div class="col-xs-6">
-                <input class="form-control minicolors"
+                <input class="form-control"
+                       ng-readonly="!accesses.update"
                        id="filter-form-color"
                        ng-change="validateGeneralInfo()"
                        ng-model="filter.properties.color"
@@ -86,6 +88,7 @@
 
               <div class="col-xs-9">
                 <input class="form-control"
+                       ng-readonly="!accesses.update"
                        id="filter-form-description"
                        ng-model="filter.properties.description"
                        ng-change="validateGeneralInfo()"
@@ -104,6 +107,7 @@
 
               <div class="col-xs-6">
                 <input class="form-control"
+                       ng-readonly="!accesses.update"
                        id="filter-form-priority"
                        ng-model="filter.properties.priority"
                        ng-change="validateGeneralInfo()"
@@ -136,6 +140,7 @@
         <div class="form-group labels-left">
           <div class="col-xs-2 row-action">
             <a ng-click="addAuthorization()"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs">{{ 'FILTER_ADD_ACCESS_RULE' | translate }}</span>
               <span class="glyphicon glyphicon-plus-sign"></span>
@@ -193,6 +198,7 @@
           <div class="col-xs-2 row-action">
             <a ng-if="!authorization.toDelete"
                ng-click="removeAuthorization(delta)"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs"
                     ng-if="authorization.toDelete"
@@ -210,6 +216,7 @@
 
               <div class="col-xs-3">
                 <select class="form-control"
+                        ng-readonly="!accesses.update"
                         ng-model="authorization.type">
                   <option value="0"
                           ng-selected="authorization.type === 0">GLOBAL</option>
@@ -237,6 +244,7 @@
 
                   <button class="identity-switch btn btn-default"
                           tooltip-append-to-body="false"
+                          ng-disabled="!accesses.update"
                           tooltip="{{ 'FILTER_IDENTITY_TYPE_TOOLTIP' | translate }}: {{ (authorization.identityType === 'user' ? 'FILTER_IDENTITY_TYPE_USER' : 'FILTER_IDENTITY_TYPE_GROUP') | translate }}"
                           ng-click="identityTypeSwitch(authorization, delta)">
 
@@ -253,6 +261,7 @@
                 <div class="col-xs-4">
                   <input class="form-control"
                          type="text"
+                         ng-readonly="!accesses.update"
                          ng-model="authorization.identity"
                          ng-change="validateAuthorizations()" />
                 </div>
@@ -262,10 +271,12 @@
                 <div class="input-group">
                   <input type="text"
                          class="form-control"
+                         ng-readonly="!accesses.update"
                          ng-model="authorization.permissions" />
 
                   <div class="input-group-btn dropdown dropup">
                     <button type="button"
+                            ng-disabled="!accesses.update"
                             class="btn btn-default dropdown-toggle"
                             data-toggle="dropdown">
                       <span class="caret"></span>
@@ -309,6 +320,7 @@
         <div class="form-group labels-left">
           <div class="col-xs-2 row-action">
             <a ng-click="addCriterion()"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs">{{ 'FILTER_ADD_CRITERION' | translate }}</span>
               <span class="glyphicon glyphicon-plus-sign"></span>
@@ -331,6 +343,7 @@
 
           <div class="col-xs-2 row-action">
             <a ng-click="removeCriterion(delta)"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs">{{ 'FILTER_REMOVE_CRITERION' | translate }}</span>
               <span class="glyphicon glyphicon-minus-sign"></span>
@@ -343,6 +356,7 @@
 
               <div class="col-xs-6">
                 <select class="form-control"
+                        ng-readonly="!accesses.update"
                         ng-model="queryParam.key"
                         ng-change="validateCriteria()"
                         required>
@@ -366,6 +380,7 @@
               <div class="col-xs-6">
                 <input class="form-control"
                        type="text"
+                       ng-readonly="!accesses.update"
                        ng-change="validateCriteria()"
                        ng-model="queryParam.value" />
 
@@ -419,6 +434,7 @@
 
           <div class="col-xs-2 row-action">
             <a ng-click="addVariable()"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs">{{ 'FILTER_ADD_VARIABLE' | translate }}</span>
               <span class="glyphicon glyphicon-plus-sign"></span>
@@ -442,6 +458,7 @@
 
           <div class="col-xs-2 row-action">
             <a ng-click="removeVariable(delta)"
+               ng-if="accesses.update"
                href>
               <span class="hidden-sm hidden-xs">{{ 'FILTER_REMOVE_VARIABLE' | translate }}</span>
               <span class="glyphicon glyphicon-minus-sign"></span>
@@ -456,6 +473,7 @@
               <div class="col-xs-6">
                 <input class="form-control"
                        type="text"
+                       ng-readonly="!accesses.update"
                        ng-change="validateVariables()"
                        ng-model="variable.name"
                        placeholder="{{ 'FILTER_VARIABLE_NAME_PLACEHOLDER' | translate }}" />
@@ -468,6 +486,7 @@
               <div class="col-xs-6">
                 <input class="form-control"
                        type="text"
+                       ng-readonly="!accesses.update"
                        ng-change="validateVariables()"
                        ng-model="variable.label"
                        placeholder="{{ 'FILTER_VARIABLE_LABEL_PLACEHOLDER' | translate }}" />
@@ -496,9 +515,8 @@
   <div class="modal-footer">
     <div class="row row-action">
       <div class="col-xs-4 align-left">
-        <button ng-if="!deletion && filter.id"
+        <button ng-if="!deletion && filter.id && accesses.delete"
                 class="btn btn-xs btn-link"
-                ng-if="filter.id"
                 type="button"
                 ng-click="confirmDeletion()"
                 translate="FILTER_DELETE">Delete filter</button>
@@ -517,7 +535,7 @@
                 ng-click="$dismiss()"
                 translate="CLOSE">Close</button>
 
-        <button ng-if="!deletion"
+        <button ng-if="!deletion && (filter.id && accesses.update)"
                 class="btn btn-primary"
                 type="submit"
                 ng-disabled="(filter.id && !accesses.update) || $invalid"
