chore(generic/boolean): cleanup and style checkbox for generic form

--- a/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
+++ b/client/client/scripts/form/directives/cam-tasklist-form-generic-variables.html
@@ -51,7 +51,8 @@
             <input type="checkbox"
                    ng-model="variable.value"
                    ng-checked="variable.value"
-                   cam-variable-name="{{ variable.name }}" 
+                   class="form-control"
+                   cam-variable-name="{{ variable.name }}"
                    cam-variable-type="{{ variable.type }}" />
           </label>
         </div>
@@ -62,7 +63,7 @@
               class="form-control"
               placeholder="{{ 'VALUE' | translate }}"
               ng-model="variable.value"
-              cam-variable-name="{{ variable.name }}" 
+              cam-variable-name="{{ variable.name }}"
               cam-variable-type="{{ variable.type }}" />
       </div>
     </div>
